updated input file field size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,10 @@ select.form-select {
     font-weight: 500;
 }
 
+.form-control[type=file] {
+    padding: .5rem 1rem;
+}
+
 input.form-control::placeholder {
     color: #8670707d;
 }
